--- a/src/app/pages/staff-profile/staff-profile.component.html
+++ b/src/app/pages/staff-profile/staff-profile.component.html
@@ -21,78 +21,86 @@
         </div>
 
         <div class="col-md-10 px-0">        
-            <div class="row mx-0" style="max-width: 100%;">
-                <div class="p-3">
-                    <div style="max-width: max-content;">
-                        <mat-form-field class="example-form-field">
-                            <mat-label>Enter a date range</mat-label>
-                            <mat-date-range-input [formGroup]="range"  [rangePicker]="rangePicker">
-                              <input matStartDate formControlName="start"  placeholder="Start date">
-                              <input matEndDate formControlName="end" placeholder="End date">
-                            </mat-date-range-input>
-                            <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
-                            <mat-date-range-picker #rangePicker>
-                              <mat-date-range-picker-actions>
-                                <button mat-button mat-button color="primary" matDateRangePickerCancel>Cancel</button>
-                                <button mat-raised-button (click)="submitDate()" color="primary" matDateRangePickerApply>Apply</button>
-                              </mat-date-range-picker-actions>
-                            </mat-date-range-picker>
-                        </mat-form-field>                        <!-- <p (click)="openDialog()" style="cursor: pointer;" class="mb-0">Time period: <span>1st Jun - 31st Jul 2023</span><span><i class="bi bi-calendar4-week mx-2"></i></span></p> -->
-                    </div>
-                </div>
-
-                <div class="row p-2">
-                    <div class="d-flex flex-row-reverse">
-                        <input class="light-sm-border" type="text" matInput (keyup)="applyFilter($event)"  #input style="width: 200px;padding: .5rem;" placeholder="Search Company">
-                    </div>
-                </div>
-                <table mat-table [dataSource]="dataSource" matSort>  
-    
-        
-                    <ng-container matColumnDef="date">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-                        <td mat-cell *matCellDef="let row"> {{row.checkin | date:'fullDate'}} </td>
-                    </ng-container>
-                
-                    <ng-container matColumnDef="checkin">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Checkin  </th>
-                        <td mat-cell *matCellDef="let row"> {{row.checkin | date: 'shortTime'}} </td>
-                    </ng-container>
-
-
-                    <ng-container matColumnDef="checkout">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Checkout  </th>
-                        <td mat-cell *matCellDef="let row"> {{row.checkout | date: 'shortTime'}} </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="work_hrs">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Work Hours  </th>
-                        <td mat-cell *matCellDef="let row"> {{getDuration(row.checkin, row.checkout)}} </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="status"> 
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-                        <td mat-cell *matCellDef="let row"> 
-                            <span *ngIf="row.status === 'pending'"><i style="color: rgb(204, 5, 5);" class="mx-1 bi bi-x-circle"></i></span>
-                            <span *ngIf="row.status === 'started'"><i style="color: rgb(105, 167, 12);" class="mx-1 bi bi-hourglass-top"></i></span>
-                            <span *ngIf="row.status === 'ended'"><i style="color: rgb(204, 201, 4);" class="mx-1 bi bi-check2-circle"></i></span>
-                            {{row.status}} </td>
-                    </ng-container>
-
-                    <tr mat-header-row class="border-bottom-light border-top-light light-text" *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row style="cursor: pointer;" class="table-rows" *matRowDef="let row; columns: displayedColumns;"></tr>
-                
-                    <tr class="mat-row" *matNoDataRow>
-                    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-                    </tr>
-                </table>
-                
-                <mat-paginator [pageSizeOptions]="[10, 25]" aria-label="Select page of users"></mat-paginator>
-            </div>              
             <div>
+                <div class="row mx-0" style="max-width: 100%;">
+                    <div class="p-3">
+                        <div style="max-width: max-content;">
+                            <mat-form-field class="example-form-field">
+                                <mat-label>Enter a date range</mat-label>
+                                <mat-date-range-input [formGroup]="range"  [rangePicker]="rangePicker">
+                                  <input matStartDate formControlName="start"  placeholder="Start date">
+                                  <input matEndDate formControlName="end" placeholder="End date">
+                                </mat-date-range-input>
+                                <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
+                                <mat-date-range-picker #rangePicker>
+                                  <mat-date-range-picker-actions>
+                                    <button mat-button mat-button color="primary" matDateRangePickerCancel>Cancel</button>
+                                    <button mat-raised-button (click)="submitDate()" color="primary" matDateRangePickerApply>Apply</button>
+                                  </mat-date-range-picker-actions>
+                                </mat-date-range-picker>
+                            </mat-form-field>                        <!-- <p (click)="openDialog()" style="cursor: pointer;" class="mb-0">Time period: <span>1st Jun - 31st Jul 2023</span><span><i class="bi bi-calendar4-week mx-2"></i></span></p> -->
+                        </div>
+                    </div>
+    
+                    <div class="row p-2">
+                        <div class="d-flex flex-row-reverse">
+                            <input class="light-sm-border" type="text" matInput (keyup)="applyFilter($event)"  #input style="width: 200px;padding: .5rem;" placeholder="Search Company">
+                        </div>
+                    </div>
+                    <table mat-table [dataSource]="dataSource" matSort>  
+        
             
-
-            </div>             
+                        <ng-container matColumnDef="date">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+                            <td mat-cell *matCellDef="let row"> {{row.checkin | date:'fullDate'}} </td>
+                        </ng-container>
+                    
+                        <ng-container matColumnDef="checkin">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Checkin  </th>
+                            <td mat-cell *matCellDef="let row"> {{row.checkin | date: 'shortTime'}} </td>
+                        </ng-container>
+    
+    
+                        <ng-container matColumnDef="checkout">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Checkout  </th>
+                            <td mat-cell *matCellDef="let row"> {{row.checkout | date: 'shortTime'}} </td>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="work_hrs">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Work Hours  </th>
+                            <td mat-cell *matCellDef="let row"> {{getDuration(row.checkin, row.checkout)}} </td>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="status"> 
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                            <td mat-cell *matCellDef="let row"> 
+                                <span *ngIf="row.status === 'pending'"><i style="color: rgb(204, 5, 5);" class="mx-1 bi bi-x-circle"></i></span>
+                                <span *ngIf="row.status === 'started'"><i style="color: rgb(105, 167, 12);" class="mx-1 bi bi-hourglass-top"></i></span>
+                                <span *ngIf="row.status === 'ended'"><i style="color: rgb(204, 201, 4);" class="mx-1 bi bi-check2-circle"></i></span>
+                                {{row.status}} </td>
+                        </ng-container>
+    
+                        <tr mat-header-row class="border-bottom-light border-top-light light-text" *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row style="cursor: pointer;" class="table-rows" *matRowDef="let row; columns: displayedColumns;"></tr>
+                    
+                        <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                        </tr>
+                    </table>
+                    
+                    <mat-paginator [pageSizeOptions]="[10, 25]" aria-label="Select page of users"></mat-paginator>
+                </div>
+            </div>    
+            
+            <div *ngIf="userRole === 'STAFF'">
+                <ejs-schedule class="rounded" [eventSettings]='eventSettings'height="620px">
+                    <ng-template #eventSettingsTemplate let-data>
+                        <div [style.background-color]="getAppointmentColor(data)" class="template-wrapper" >
+                            <div>{{data.Subject}}</div>
+                        </div>
+                    </ng-template>
+                </ejs-schedule>
+            </div>
         </div>
     </div>    
 </div>
